removed docker & corrected pom.xml's & added k8s