@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.michibaum</groupId>
 		<artifactId>microservice</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>latest</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -28,20 +28,8 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-registry-elastic</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.jolokia</groupId>
 			<artifactId>jolokia-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-sleuth</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
 		</dependency>
 
 		<!-- Logging -->
@@ -82,30 +70,33 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>
+						--enable-preview
+					</jvmArguments>
+					<layers>
+						<enabled>true</enabled>
+					</layers>
+					<image>
+						<name>registry.hub.docker.com/70131370/${project.artifactId}:${project.version}</name>
+						<publish>true</publish>
+					</image>
+					<docker>
+						<publishRegistry>
+							<username>70131370</username>
+							<url>https://registry.hub.docker.com</url>
+						</publishRegistry>
+					</docker>
+					<additionalProperties>
+						<time>${maven.build.timestamp}</time>
+					</additionalProperties>
+				</configuration>
 				<executions>
 					<execution>
 						<goals>
 							<goal>build-info</goal>
 							<goal>build-image</goal>
 						</goals>
-						<configuration>
-							<layers>
-								<enabled>true</enabled>
-							</layers>
-							<image>
-								<imageName>70131370/registry</imageName>
-								<publish>true</publish>
-							</image>
-							<docker>
-								<publishRegistry>
-									<username>70131370</username>
-									<email>michael_baumberger@gmx.ch</email>
-								</publishRegistry>
-							</docker>
-							<additionalProperties>
-								<time>${maven.build.timestamp}</time>
-							</additionalProperties>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
